{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 124,
  "lineage": "0df68f9c-e0d6-4d76-0be6-edabbf999165",
  "resources": [
    {
      "module": "module.ec2_application",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1_dnsdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0caba1afa4f08cfaa",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0caba1afa4f08cfaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0c8bc135069f260db"
              }
            ],
            "primary_network_interface_id": "eni-0c8bc135069f260db",
            "private_dns": "ip-10-0-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0266047c71b84e102",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07869b2c047a1f5d2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0caba1afa4f08cfaa",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0bb7b04ab0245e9e5",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb7b04ab0245e9e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05eb4ff655a58076c"
              }
            ],
            "primary_network_interface_id": "eni-05eb4ff655a58076c",
            "private_dns": "ip-10-0-2-60.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.60",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0830f9ffc5267b10a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cccbc151485b24",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0bb7b04ab0245e9e5",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_application",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app1_pathbased",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0062c981119999900",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0062c981119999900",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-084b30fd063c396dc"
              }
            ],
            "primary_network_interface_id": "eni-084b30fd063c396dc",
            "private_dns": "ip-10-0-1-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.132",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0743319cb6b744301",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07869b2c047a1f5d2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0062c981119999900",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0e74ce28f621d8b7b",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e74ce28f621d8b7b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f2ef4ec704de9415"
              }
            ],
            "primary_network_interface_id": "eni-0f2ef4ec704de9415",
            "private_dns": "ip-10-0-2-235.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.235",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08c4a639834ad9366",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cccbc151485b24",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0e74ce28f621d8b7b",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0cd48715720f70ef9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd48715720f70ef9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-066f719f6fafdeedb"
              }
            ],
            "primary_network_interface_id": "eni-066f719f6fafdeedb",
            "private_dns": "ip-10-0-3-216.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.216",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-054461e7d99816d5b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021b24ca80a3a2af3",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-2",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app1-pathbased-2",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0cd48715720f70ef9",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_application",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2_dnsdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-08ce2053a3df40cdd",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08ce2053a3df40cdd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09fb66c108ee0b650"
              }
            ],
            "primary_network_interface_id": "eni-09fb66c108ee0b650",
            "private_dns": "ip-10-0-1-64.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.64",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07715d56bdc6f60af",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07869b2c047a1f5d2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-08ce2053a3df40cdd",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0bb83c021c5b0e238",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bb83c021c5b0e238",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b1a67b7f8a3af5ea"
              }
            ],
            "primary_network_interface_id": "eni-0b1a67b7f8a3af5ea",
            "private_dns": "ip-10-0-2-201.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.201",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-035d545d102aba861",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cccbc151485b24",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0bb83c021c5b0e238",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_application",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app2_pathbased",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0f95b21096d5bdb77",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f95b21096d5bdb77",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-06c72a2982773c718"
              }
            ],
            "primary_network_interface_id": "eni-06c72a2982773c718",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.253",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0dedc33ad40ded6df",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07869b2c047a1f5d2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0f95b21096d5bdb77",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-04728247ff6a57a06",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04728247ff6a57a06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0129857c4caccaf7e"
              }
            ],
            "primary_network_interface_id": "eni-0129857c4caccaf7e",
            "private_dns": "ip-10-0-2-143.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.143",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-089db777e31ce0ddf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cccbc151485b24",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-04728247ff6a57a06",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "2",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0e456113a4197df10",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e456113a4197df10",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0aae08fc0da5fd18f"
              }
            ],
            "primary_network_interface_id": "eni-0aae08fc0da5fd18f",
            "private_dns": "ip-10-0-3-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.125",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d70ef8d5330fe59a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021b24ca80a3a2af3",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-2",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app2-pathbased-2",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0e456113a4197df10",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_application",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app3_dnsdb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0f24415ef8edb5077",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f24415ef8edb5077",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0d69f1c1d65c2e44e"
              }
            ],
            "primary_network_interface_id": "eni-0d69f1c1d65c2e44e",
            "private_dns": "ip-10-0-1-10.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08315e59735e301a2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07869b2c047a1f5d2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app3-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app3-dnsdb-0",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0f24415ef8edb5077",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.rds.module.rdsdb.module.db_instance.aws_cloudwatch_log_group.this",
            "module.rds.module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rds.module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rds.module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rds.module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "1",
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-035fb06c8664ecb09",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035fb06c8664ecb09",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-009df5cc35dd85837"
              }
            ],
            "primary_network_interface_id": "eni-009df5cc35dd85837",
            "private_dns": "ip-10-0-2-132.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.132",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01f732235ae8e112f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053cccbc151485b24",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app3-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-app-app3-dnsdb-1",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f16d018079c0e071"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-035fb06c8664ecb09",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.rds.module.rdsdb.module.db_instance.aws_cloudwatch_log_group.this",
            "module.rds.module.rdsdb.module.db_instance.aws_db_instance.this",
            "module.rds.module.rdsdb.module.db_instance.aws_iam_role.enhanced_monitoring",
            "module.rds.module.rdsdb.module.db_instance.data.aws_iam_policy_document.enhanced_monitoring",
            "module.rds.module.rdsdb.module.db_instance.random_id.snapshot_identifier",
            "module.rds.module.rdsdb.module.db_option_group.aws_db_option_group.this",
            "module.rds.module.rdsdb.module.db_parameter_group.aws_db_parameter_group.this",
            "module.rds.module.rdsdb.module.db_subnet_group.aws_db_subnet_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip_original",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06afa90dd84b58b71",
            "arn": "arn:aws:ec2:us-east-1:043509840958:elastic-ip/eipalloc-06afa90dd84b58b71",
            "association_id": "eipassoc-0f6ca723fcf5830c9",
            "domain": "vpc",
            "id": "eipalloc-06afa90dd84b58b71",
            "instance": "i-0a506388580450235",
            "network_border_group": "us-east-1",
            "network_interface": "eni-053039a6906fbafb2",
            "private_dns": "ip-10-0-101-210.ec2.internal",
            "private_ip": "10.0.101.210",
            "public_dns": "ec2-52-202-20-239.compute-1.amazonaws.com",
            "public_ip": "52.202.20.239",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-bastion-eip",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-bastion-eip",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_bastion.aws_instance.bastion",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0199fa5fada510433",
            "arn": "arn:aws:ec2:us-east-1:043509840958:instance/i-0a506388580450235",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a506388580450235",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "eks-terraform-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-053039a6906fbafb2"
              }
            ],
            "primary_network_interface_id": "eni-053039a6906fbafb2",
            "private_dns": "ip-10-0-101-210.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.210",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09602ef2dd91cef2b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0298d604a8194a1e7",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-bastion",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-bastion",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ad6b1de37bf3e945"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "i-0a506388580450235",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-099c5c5395665760b",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-099c5c5395665760b",
            "ingress": [],
            "name": "hr-dev-public-bastion-sg-20260221135918205600000016",
            "name_prefix": "hr-dev-public-bastion-sg-",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "hr-dev-public-bastion-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "hr-dev-public-bastion-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "sg-099c5c5395665760b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1663539358",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-099c5c5395665760b",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-564720186",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-099c5c5395665760b",
            "security_group_rule_id": "sgr-090415a24c3ac3860",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.ec2_bastion.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.eip",
      "mode": "managed",
      "type": "aws_eip",
      "name": "bastion_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03744d6b2569a77d6",
            "arn": "arn:aws:ec2:us-east-1:043509840958:elastic-ip/eipalloc-03744d6b2569a77d6",
            "association_id": "eipassoc-064daf0c1686111c2",
            "domain": "vpc",
            "id": "eipalloc-03744d6b2569a77d6",
            "instance": "i-0a506388580450235",
            "network_border_group": "us-east-1",
            "network_interface": "eni-053039a6906fbafb2",
            "private_dns": "ip-10-0-101-210.ec2.internal",
            "private_ip": "10.0.101.210",
            "public_dns": "ec2-54-145-37-195.compute-1.amazonaws.com",
            "public_ip": "54.145.37.195",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_ami.amzlinux2",
            "module.ec2_bastion.aws_eip.bastion_eip_original",
            "module.ec2_bastion.aws_instance.bastion",
            "module.ec2_bastion.data.aws_ami.amzlinux2",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.ec2_bastion.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.ec2_bastion.null_resource.bastion_provisioner",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.loadbalancer_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.private_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.public_bastion_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.computed_ingress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.egress_with_source_security_group_id",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_rules",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_ipv6_cidr_blocks",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_prefix_list_ids",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_self",
            "module.security_groups.module.rdsdb_sg.aws_security_group_rule.ingress_with_source_security_group_id",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.k8s_resources",
      "mode": "managed",
      "type": "kubernetes_namespace_v1",
      "name": "k8s_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/kubernetes\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "dev",
            "metadata": [
              {
                "generation": 0,
                "name": "dev",
                "resource_version": "1169",
                "uid": "052a7623-51c6-468d-9ed5-cf55bacc3366"
              }
            ],
            "wait_for_default_service_account": false
          },
          "identity_schema_version": 1,
          "identity": {
            "api_version": "v1",
            "kind": "Namespace",
            "name": "dev"
          },
          "dependencies": [
            "data.aws_eks_cluster_auth.cluster",
            "module.eks.aws_eks_cluster.eks_cluster",
            "module.eks.aws_eks_node_group.eks_ng_private",
            "module.eks.aws_iam_openid_connect_provider.oidc_provider",
            "module.eks.aws_iam_role.eks_master_role",
            "module.eks.aws_iam_role.eks_nodegroup_role",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEC2ContainerRegistryReadOnly",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSClusterPolicy",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSVPCResourceController",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKSWorkerNodePolicy",
            "module.eks.aws_iam_role_policy_attachment.eks-AmazonEKS_CNI_Policy",
            "module.eks.data.aws_eks_cluster_auth.cluster",
            "module.eks.data.aws_partition.current",
            "module.eks.kubernetes_config_map_v1.aws_auth",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-058b4958f620bb206",
            "description": "Security Group with HTTP \u0026 HTTPS open for entire Internet (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-058b4958f620bb206",
            "ingress": [],
            "name": "dev-loadbalancer-sg-20260221135849868300000007",
            "name_prefix": "dev-loadbalancer-sg-",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-loadbalancer-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-loadbalancer-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "sg-058b4958f620bb206",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3694329511",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-058b4958f620bb206",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3806484965",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-058b4958f620bb206",
            "security_group_rule_id": "sgr-09dbcdd6ff1c45dd3",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2543677161",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-058b4958f620bb206",
            "security_group_rule_id": "sgr-01b6f4cb25968d5c6",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this",
            "module.security_groups.module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-0f16d018079c0e071",
            "description": "Security Group with HTTP \u0026 SSH port open for entire VPC Block (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0f16d018079c0e071",
            "ingress": [],
            "name": "dev-private-sg-20260221135849871000000009",
            "name_prefix": "dev-private-sg-",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-private-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-private-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "sg-0f16d018079c0e071",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-452586489",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0f16d018079c0e071",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-155843072",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f16d018079c0e071",
            "security_group_rule_id": "sgr-0e328d82bab8510c5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3217270709",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f16d018079c0e071",
            "security_group_rule_id": "sgr-048b7acf7d902146f",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-2561651529",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0f16d018079c0e071",
            "security_group_rule_id": "sgr-0e7b11fd1c70a46f4",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.private_sg.aws_security_group.this",
            "module.security_groups.module.private_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.private_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-0ad6b1de37bf3e945",
            "description": "Security Group with SSH port open for everybody (IPv4 CIDR), egress ports are all world open",
            "egress": [],
            "id": "sg-0ad6b1de37bf3e945",
            "ingress": [],
            "name": "dev-public-bastion-sg-2026022113584987190000000a",
            "name_prefix": "dev-public-bastion-sg-",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-public-bastion-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-public-bastion-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "sg-0ad6b1de37bf3e945",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2008437034",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-0ad6b1de37bf3e945",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2127522615",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0ad6b1de37bf3e945",
            "security_group_rule_id": "sgr-07e9b015a51c0d1fe",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.public_bastion_sg.aws_security_group.this",
            "module.security_groups.module.public_bastion_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.public_bastion_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-05e847fd1c923fdd5",
            "description": "Access to MySQL DB for entire VPC CIDR Block",
            "egress": [],
            "id": "sg-05e847fd1c923fdd5",
            "ingress": [],
            "name": "dev-rdsdb-sg-20260221135849870400000008",
            "name_prefix": "dev-rdsdb-sg-",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-rdsdb-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-rdsdb-sg",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "sg-05e847fd1c923fdd5",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "computed_ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-1208858220",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "region": "us-east-1",
            "security_group_id": "sg-05e847fd1c923fdd5",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/16"
            ],
            "description": "MySQL access from within VPC",
            "from_port": 3306,
            "id": "sgrule-1002774353",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-05e847fd1c923fdd5",
            "security_group_rule_id": "sgr-016b63bdafeb26fa9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security_groups.module.rdsdb_sg.aws_security_group.this",
            "module.security_groups.module.rdsdb_sg.aws_security_group.this_name_prefix",
            "module.vpc.module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.module.vpc.aws_customer_gateway.this",
            "module.vpc.module.vpc.aws_db_subnet_group.database",
            "module.vpc.module.vpc.aws_default_network_acl.this",
            "module.vpc.module.vpc.aws_default_route_table.default",
            "module.vpc.module.vpc.aws_default_security_group.this",
            "module.vpc.module.vpc.aws_default_vpc.this",
            "module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.module.vpc.aws_flow_log.this",
            "module.vpc.module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_network_acl.database",
            "module.vpc.module.vpc.aws_network_acl.elasticache",
            "module.vpc.module.vpc.aws_network_acl.intra",
            "module.vpc.module.vpc.aws_network_acl.outpost",
            "module.vpc.module.vpc.aws_network_acl.private",
            "module.vpc.module.vpc.aws_network_acl.public",
            "module.vpc.module.vpc.aws_network_acl.redshift",
            "module.vpc.module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.module.vpc.aws_route.database_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.database_internet_gateway",
            "module.vpc.module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.module.vpc.aws_route.database_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_dns64_nat_gateway",
            "module.vpc.module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.module.vpc.aws_route.private_nat_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway",
            "module.vpc.module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.elasticache",
            "module.vpc.module.vpc.aws_route_table.intra",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_route_table.redshift",
            "module.vpc.module.vpc.aws_route_table_association.database",
            "module.vpc.module.vpc.aws_route_table_association.elasticache",
            "module.vpc.module.vpc.aws_route_table_association.intra",
            "module.vpc.module.vpc.aws_route_table_association.outpost",
            "module.vpc.module.vpc.aws_route_table_association.private",
            "module.vpc.module.vpc.aws_route_table_association.public",
            "module.vpc.module.vpc.aws_route_table_association.redshift",
            "module.vpc.module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_subnet.elasticache",
            "module.vpc.module.vpc.aws_subnet.intra",
            "module.vpc.module.vpc.aws_subnet.outpost",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_subnet.redshift",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.module.vpc.aws_vpn_gateway.this",
            "module.vpc.module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_ipv6_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_prefix_list_ids",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security_groups.module.rdsdb_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:network-acl/acl-05c3f17f4e2fa7e73",
            "default_network_acl_id": "acl-05c3f17f4e2fa7e73",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-05c3f17f4e2fa7e73",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "043509840958",
            "region": "us-east-1",
            "subnet_ids": [
              "subnet-021b24ca80a3a2af3",
              "subnet-0298d604a8194a1e7",
              "subnet-0369b5ef92cc05ca2",
              "subnet-053cccbc151485b24",
              "subnet-05896ce369f2a718f",
              "subnet-07869b2c047a1f5d2",
              "subnet-0dfb7c2b7342956b3",
              "subnet-0fe8b2c004d114154"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:route-table/rtb-013e43e818dfc8613",
            "default_route_table_id": "rtb-013e43e818dfc8613",
            "id": "rtb-013e43e818dfc8613",
            "owner_id": "043509840958",
            "propagating_vgws": null,
            "region": "us-east-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:security-group/sg-0c8ed3514f386b22a",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c8ed3514f386b22a",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-default",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27f7e69cbad393f",
            "arn": "arn:aws:ec2:us-east-1:043509840958:elastic-ip/eipalloc-0d27f7e69cbad393f",
            "domain": "vpc",
            "id": "eipalloc-0d27f7e69cbad393f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-205-165-10.compute-1.amazonaws.com",
            "public_ip": "18.205.165.10",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:internet-gateway/igw-082645da25a1d4e01",
            "id": "igw-082645da25a1d4e01",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d27f7e69cbad393f",
            "association_id": "eipassoc-09473115e1e641777",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0edad4db6570ec563",
            "network_interface_id": "eni-023b596b36239b890",
            "private_ip": "10.0.101.117",
            "public_ip": "18.205.165.10",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0298d604a8194a1e7",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-000a3d6422f45990a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0edad4db6570ec563",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-000a3d6422f45990a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-000a3d6422f45990a"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_eip.nat",
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_nat_gateway.this",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-082645da25a1d4e01",
            "id": "r-rtb-03967fb09170e67041080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-03967fb09170e6704",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-03967fb09170e6704"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_internet_gateway.this",
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:route-table/rtb-0399c29e0acbb4b40",
            "id": "rtb-0399c29e0acbb4b40",
            "owner_id": "043509840958",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "rtb-0399c29e0acbb4b40",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:route-table/rtb-000a3d6422f45990a",
            "id": "rtb-000a3d6422f45990a",
            "owner_id": "043509840958",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "rtb-000a3d6422f45990a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:route-table/rtb-03967fb09170e6704",
            "id": "rtb-03967fb09170e6704",
            "owner_id": "043509840958",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "timeouts": null,
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "rtb-03967fb09170e6704",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e2cee4d200ab29ee",
            "region": "us-east-1",
            "route_table_id": "rtb-0399c29e0acbb4b40",
            "subnet_id": "subnet-082384c58db51293d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea1dfdaa8a3592ca",
            "region": "us-east-1",
            "route_table_id": "rtb-0399c29e0acbb4b40",
            "subnet_id": "subnet-0369b5ef92cc05ca2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a08e494cacb055b",
            "region": "us-east-1",
            "route_table_id": "rtb-0399c29e0acbb4b40",
            "subnet_id": "subnet-05896ce369f2a718f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.database",
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.database",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022b79e2161fef527",
            "region": "us-east-1",
            "route_table_id": "rtb-000a3d6422f45990a",
            "subnet_id": "subnet-07869b2c047a1f5d2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b96989bbd300f293",
            "region": "us-east-1",
            "route_table_id": "rtb-000a3d6422f45990a",
            "subnet_id": "subnet-053cccbc151485b24"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0444afc2c2e61d4c3",
            "region": "us-east-1",
            "route_table_id": "rtb-000a3d6422f45990a",
            "subnet_id": "subnet-021b24ca80a3a2af3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.private",
            "module.vpc.module.vpc.aws_subnet.private",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0efe51d849aef4464",
            "region": "us-east-1",
            "route_table_id": "rtb-03967fb09170e6704",
            "subnet_id": "subnet-0298d604a8194a1e7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e93eae3df6c0b2be",
            "region": "us-east-1",
            "route_table_id": "rtb-03967fb09170e6704",
            "subnet_id": "subnet-0dfb7c2b7342956b3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01912fccd61599312",
            "region": "us-east-1",
            "route_table_id": "rtb-03967fb09170e6704",
            "subnet_id": "subnet-0fe8b2c004d114154"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.module.vpc.aws_route_table.public",
            "module.vpc.module.vpc.aws_subnet.public",
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-082384c58db51293d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.151.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082384c58db51293d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-082384c58db51293d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-0369b5ef92cc05ca2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.152.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0369b5ef92cc05ca2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-0369b5ef92cc05ca2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-05896ce369f2a718f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.153.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05896ce369f2a718f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-db-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Database Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-05896ce369f2a718f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-07869b2c047a1f5d2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07869b2c047a1f5d2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-07869b2c047a1f5d2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-053cccbc151485b24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cccbc151485b24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-053cccbc151485b24",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-021b24ca80a3a2af3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-021b24ca80a3a2af3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-private-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Private Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-021b24ca80a3a2af3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-0298d604a8194a1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0298d604a8194a1e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1a",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-0298d604a8194a1e7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-0dfb7c2b7342956b3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dfb7c2b7342956b3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1b",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-0dfb7c2b7342956b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:subnet/subnet-0fe8b2c004d114154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe8b2c004d114154",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "043509840958",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc-public-us-east-1c",
              "Project": "terraform-aws-infrastructure",
              "Type": "Public Subnets",
              "environment": "dev",
              "owners": "hr"
            },
            "vpc_id": "vpc-0378c6ca2ce9c16be"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "subnet-0fe8b2c004d114154",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.module.vpc.aws_vpc.this",
            "module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:043509840958:vpc/vpc-0378c6ca2ce9c16be",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05c3f17f4e2fa7e73",
            "default_route_table_id": "rtb-013e43e818dfc8613",
            "default_security_group_id": "sg-0c8ed3514f386b22a",
            "dhcp_options_id": "dopt-0ea7dc59dbd9032e2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0378c6ca2ce9c16be",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-013e43e818dfc8613",
            "owner_id": "043509840958",
            "region": "us-east-1",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "dev-myvpc",
              "Project": "terraform-aws-infrastructure",
              "environment": "dev",
              "owners": "hr"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "043509840958",
            "id": "vpc-0378c6ca2ce9c16be",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}